debicn/control: new maintainer

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,10 @@
 Source: dvdisaster
 Section: otherosfs
 Priority: optional
-Maintainer: Debian QA Group <packages@qa.debian.org>
+Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org>
+Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
+        Rogério Brito <rbrito@ime.usp.br>
+DM-Upload-Allowed: yes
 Build-Depends: debhelper (>= 7), quilt, gettext, libbz2-dev, libgtk2.0-dev, libpng12-dev, pkg-config
 Standards-Version: 3.8.3
 Homepage: http://dvdisaster.sourceforge.net/
