--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
 DM-Upload-Allowed: yes
 Build-Depends: debhelper (>= 7), quilt, gettext, libbz2-dev, libgtk2.0-dev, libpng12-dev, pkg-config
 Standards-Version: 3.8.3
-Homepage: http://dvdisaster.sourceforge.net/
+Homepage: http://dvdisaster.net/
 
 Package: dvdisaster
 Section: otherosfs
