Initial migration to format "3.0 (quilt)".

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org
 Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
         Rogério Brito <rbrito@ime.usp.br>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 7), quilt, gettext, libbz2-dev, libgtk2.0-dev, libpng12-dev, pkg-config
+Build-Depends: debhelper (>= 7), gettext, libbz2-dev, libgtk2.0-dev, libpng12-dev, pkg-config
 Standards-Version: 3.8.3
 Vcs-Browser: http://git.debian.org/?p=pkg-opt-media/dvdisaster.git 
 Vcs-Git: git://git.debian.org/pkg-opt-media/dvdisaster.git
