--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 
-include /usr/share/quilt/quilt.make
-
-clean: unpatch
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
@@ -14,7 +12,7 @@ clean: unpatch
 	dh_clean
 
 configure: configure-stamp
-configure-stamp: patch
+configure-stamp:
 	dh_testdir
 
 	./configure --prefix=/usr --bindir=\$${prefix}/bin --docdir=\$${prefix}share/doc --docsubdir=dvdisaster-doc/html --localedir=\$${prefix}/share/locale --mandir=\$${prefix}/share/man
