--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 7),
 	       gettext,
 	       libbz2-dev,
 	       libgtk2.0-dev,
-	       libpng12-dev,
+	       libpng-dev,
 	       pkg-config
 Standards-Version: 3.9.3
 Vcs-Browser: http://git.debian.org/?p=pkg-opt-media/dvdisaster.git 
