--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org
 Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
         Rogério Brito <rbrito@ime.usp.br>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 7),
+Build-Depends: debhelper (>= 7.0.50~),
 	       gettext,
 	       libbz2-dev,
 	       libgtk2.0-dev,
