--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: otherosfs
 Priority: optional
 Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org>
 Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
-        Rogério Brito <rbrito@ime.usp.br>
+           Rogério Brito <rbrito@ime.usp.br>
 Build-Depends: debhelper (>= 9),
-	       gettext,
-	       libbz2-dev,
-	       libgtk2.0-dev,
-	       libpng-dev,
-	       pkg-config
+               gettext,
+               libbz2-dev,
+               libgtk2.0-dev,
+               libpng-dev,
+               pkg-config
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
@@ -17,7 +17,7 @@ Homepage: http://dvdisaster.net/
 
 Package: dvdisaster
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xdg-utils
+Depends: xdg-utils, ${misc:Depends}, ${shlibs:Depends}
 Recommends: dvdisaster-doc
 Description: data loss/scratch/aging protection for CD/DVD media
  dvdisaster provides a margin of safety against data loss on CD and DVD media
