--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org
 Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
            Rogério Brito <rbrito@ime.usp.br>
 Build-Depends: debhelper (>= 9),
+               dpkg-dev (>= 1.16.1.1),
                gettext,
                libbz2-dev,
                libgtk2.0-dev,
