--- a/debian/rules
+++ b/debian/rules
@@ -27,3 +27,11 @@ override_dh_auto_install-arch:
 
 override_dh_auto_install-indep:
 	make install-doc BUILDROOT=$(CURDIR)/debian/tmp
+
+# Ensure that none of the text files that the application
+# tries to display directly are not compressed, as it doesn't
+# automatically decompress text files.
+override_dh_compress:
+	dh_compress -p dvdisaster \
+		-X.CHANGELOG -XCREDITS -XREADME.MODIFYING -XTODO
+	dh_compress --remaining-packages
