--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,8 @@ include /usr/share/dpkg/buildflags.mk
 export DEB_CFLAGS_MAINT_APPEND = $(CPPFLAGS) -Wall -Wno-deprecated-declarations -pedantic
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
-MUTABLE_FILES := build.h $(wildcard locale/*.po)
+MUTABLE_FILES := build.h $(wildcard locale/*.po) \
+	documentation/config/version.tex
 
 %:
 	dh $@
