--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 10),
                dpkg-dev (>= 1.16.1.1),
                gettext,
                libbz2-dev,
+               libcam-dev [kfreebsd-any],
                libgtk2.0-dev,
                libpng-dev,
                pkg-config
@@ -19,6 +20,7 @@ Standards-Version: 4.0.0
 Vcs-Browser: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
 Homepage: http://dvdisaster.net/
+Testsuite: autopkgtest
 
 Package: dvdisaster
 Architecture: any
