Update uploaders list.
Add myself to uploaders list.

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: otherosfs
 Priority: optional
 Maintainer: Optical Media Tools Team <pkg-opt-media-team@lists.alioth.debian.org>
 Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
-           Rogério Brito <rbrito@ime.usp.br>
+           Rogério Brito <rbrito@ime.usp.br>,
+           Carlos Maddela <e7appew@gmail.com>
 Build-Depends: debhelper (>= 10),
                dh-exec,
                dpkg-dev (>= 1.16.1.1),
