--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends-Indep: texlive-fonts-recommended,
                      texlive-latex-base,
                      texlive-latex-extra
 Standards-Version: 4.1.2
-Vcs-Browser: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
-Vcs-Git: https://anonscm.debian.org/git/pkg-opt-media/dvdisaster.git
+Vcs-Browser: https://salsa.debian.org/optical-media-tools-team/dvdisaster
+Vcs-Git: https://salsa.debian.org/optical-media-tools-team/dvdisaster.git
 Homepage: http://dvdisaster.net/
 
 Package: dvdisaster
