--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Standards-Version: 4.1.4
 Vcs-Browser: https://salsa.debian.org/optical-media-team/dvdisaster
 Vcs-Git: https://salsa.debian.org/optical-media-team/dvdisaster.git
 Homepage: http://dvdisaster.net/
+Rules-Requires-Root: no
 
 Package: dvdisaster
 Architecture: any
