--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ override_dh_auto_configure:
 		--mandir=share/man \
 		--localedir=share/locale \
 		--docdir=share/doc \
-		--docsubdir=dvdisaster-doc \
+		--docsubdir=dvdisaster \
 		--with-embedded-src-path=no
 
 override_dh_auto_build-arch:
