--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends-Indep: texlive-fonts-recommended,
 Standards-Version: 4.1.4
 Vcs-Browser: https://salsa.debian.org/optical-media-team/dvdisaster
 Vcs-Git: https://salsa.debian.org/optical-media-team/dvdisaster.git
-Homepage: http://dvdisaster.net/
+Homepage: https://web.archive.org/web/20180428070843/http://dvdisaster.net/
 Rules-Requires-Root: no
 
 Package: dvdisaster
