--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-debian-branch = debian/unstable
+debian-branch = debian/experimental
 upstream-branch = upstream/latest
 sign-tags = True
 pristine-tar = True
