debian/gbp.conf: Switch debian branch to debian/master.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-debian-branch = debian/experimental
+debian-branch = debian/master
 upstream-branch = upstream/latest
 sign-tags = True
 pristine-tar = True
