Make sure that the upstream changelog remains uncompressed
Make sure that the upstream changelog remains uncompressed,
so that the application can display it.

--- a/debian/rules
+++ b/debian/rules
@@ -68,4 +68,8 @@ override_dh_auto_install-indep:
 # automatically decompress text files.
 override_dh_compress-arch:
 	dh_compress -p dvdisaster \
-		-XCHANGELOG -XCREDITS -XREADME.MODIFYING -XTODO
+		-Xchangelog -XCREDITS -XREADME.MODIFYING -XTODO
+	gzip -9n debian/dvdisaster/usr/share/doc/dvdisaster/changelog.Debian
+
+override_dh_installchangelogs-arch:
+	dh_installchangelogs -p dvdisaster -k
