--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 12),
                libcam-dev [kfreebsd-any],
                libgtk2.0-dev,
                libpng-dev,
-               pkg-config
+               pkg-config,
+               debhelper-compat (= 12)
 Build-Depends-Indep: texlive-fonts-recommended <!nodoc>,
                      texlive-latex-base <!nodoc>,
                      texlive-latex-extra  <!nodoc>
