chore: build system adjustments
Remove build.h and version.tex from versioning, they're autogenerated
Make 'Makefile' the dummy makefile to instruct user to launch configure if no GNUmakefile is found
Make GNUmakefile the generated makefile and exclude it from the versioning
Update .gitignore accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .pc
 *.o
 *~
+*.gcno
+*.gcda
+*.gcov
+Makefile.config
+configure.log
+locale/Makefile
+GNUmakefile
+.gitignore
+simple-md5sum
+inlined-icons.h
+help-dialogs.h
+dvdisaster
+build.h
+dvdisaster.mo
+locale/messages.pot
