--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   win64:
-    runs-on: win-latest
+    runs-on: windows-latest
     defaults:
       run:
         shell: msys2 {0}
