--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,16 +11,15 @@ jobs:
     steps:
     - uses: msys2/setup-msys2@v2
       with:
+        msystem: MINGW64
         update: false
-        install: base-devel git mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2 
-    #- run: git config --global core.autocrlf input
-    #  shell: bash
+        install: git make gcc pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2
     - uses: actions/checkout@v2
     - name: configure
-      run: ./configure
+      run: msys2 -c './configure'
     - name: make
-      run: make
+      run: msys2 -c 'make'
     - name: check executability
-      run: ./dvdisaster.exe --version
+      run: msys2 -c './dvdisaster.exe --version'
     - name: regression tests
-      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+      run: msys2 -c 'mkdir /var/tmp/regtest && ./regtest/runtests.sh'
