--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ jobs:
         msystem: MINGW64
         update: false
         install: git make gcc pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2
+    - shell: msys2 {0}
     - uses: actions/checkout@v2
     - name: configure
       run: msys2 -c './configure'
