--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,16 @@ jobs:
       with:
         msystem: MINGW64
         update: false
-        install: git make gcc pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2
-    - shell: msys2 {0}
     - uses: actions/checkout@v2
-    - name: configure
-      run: msys2 -c './configure'
-    - name: make
+    - shell: msys2 {0}
+      name: configure
+      run: ./configure
+    - shell: msys2 {0}
+      name: make
       run: msys2 -c 'make'
-    - name: check executability
+    - shell: msys2 {0}
+      name: check executability
       run: msys2 -c './dvdisaster.exe --version'
-    - name: regression tests
+    - shell: msys2 {0}
+      name: regression tests
       run: msys2 -c 'mkdir /var/tmp/regtest && ./regtest/runtests.sh'
