--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
       run: ./configure
     - shell: msys2 {0}
       name: make
-      run: msys2 -c 'make'
+      run: make
     - shell: msys2 {0}
       name: check executability
-      run: msys2 -c './dvdisaster.exe --version'
+      run: ./dvdisaster.exe --version
     - shell: msys2 {0}
       name: regression tests
-      run: msys2 -c 'mkdir /var/tmp/regtest && ./regtest/runtests.sh'
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
