--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,26 +15,13 @@ jobs:
         update: false
         install: git make pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2 mingw-w64-x86_64-gcc
     - uses: actions/checkout@v2
-    - shell: msys2 {0}
-      name: configure
-      run: |
-        set MSYSTEM=MINGW64
-        ./configure
-    - shell: msys2 {0}
-      name: make
-      run: |
-        set MSYSTEM=MINGW64
-        echo $MSYSTEM && nproc && make -j$(nproc)
-    - shell: msys2 {0}
-      name: check executability
-      run: |
-        set MSYSTEM=MINGW64
-        ./dvdisaster.exe --version
-    - shell: msys2 {0}
-      name: check executable
+    - name: configure
+      run: ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster.exe --version
+    - name: check executable
       run: file dvdisaster.exe && file dvdisaster.exe | grep -q 'x86-64, for MS Windows'
-    - shell: msys2 {0}
-      name: regression tests
-      run: |
-        set MSYSTEM=MINGW64
-        mkdir /var/tmp/regtest && ./regtest/runtests.sh
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
