--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,8 @@ jobs:
         msystem: MINGW64
         update: false
         install: git diffutils make pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2 mingw-w64-x86_64-gcc
+    - run: git config --global core.autocrlf input
+      shell: bash
     - uses: actions/checkout@v2
     - name: configure
       run: ./configure
@@ -23,5 +25,29 @@ jobs:
       run: ./dvdisaster.exe --version
     - name: check executable
       run: file dvdisaster.exe && file dvdisaster.exe | grep -q 'x86-64, for MS Windows'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+  win32:
+    runs-on: windows-2016
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW32
+        update: false
+        install: git diffutils make pkg-config mingw-w64-i686-gtk2 mingw-w64-i686-glib2 mingw-w64-i686-gcc
+    - run: git config --global core.autocrlf input
+      shell: bash
+    - uses: actions/checkout@v2
+    - name: configure
+      run: ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster.exe --version
+    - name: check executable
+      run: file dvdisaster.exe && file dvdisaster.exe | grep -q '386, for MS Windows'
     - name: regression tests
       run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
