--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,46 @@ name: C/C++ CI
 on: [pull_request]
 
 jobs:
+
+  linux64-gui:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: install prerequisites
+      run: sudo apt update && sudo apt install -y libgtk2.0-dev libglib2.0-dev
+    - name: configure
+      run: ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster --version
+    - name: check executable
+      run: file dvdisaster && file dvdisaster | grep -q 'ELF 64'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
+  linux64-cli:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: install prerequisites
+      run: sudo apt update && sudo apt install -y libglib2.0-dev
+    - name: configure
+      run: env CLI_ONLY=1 ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster --version
+    - name: check executable
+      run: file dvdisaster && file dvdisaster | grep -q 'ELF 64'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
   win64:
     runs-on: windows-2016
+
     defaults:
       run:
         shell: msys2 {0}
@@ -27,8 +65,10 @@ jobs:
       run: file dvdisaster.exe && file dvdisaster.exe | grep -q 'x86-64, for MS Windows'
     - name: regression tests
       run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
   win32:
     runs-on: windows-2016
+
     defaults:
       run:
         shell: msys2 {0}
