--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,8 @@ name: C/C++ CI
 on: [pull_request]
 
 jobs:
-  build:
 
+  linux64-gui:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,8 +14,80 @@ jobs:
     - name: configure
       run: ./configure
     - name: make
-      run: make
+      run: nproc && make -j$(nproc)
     - name: check executability
       run: ./dvdisaster --version
+    - name: check executable
+      run: file dvdisaster && file dvdisaster | grep -q 'ELF 64'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
+  linux64-cli:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: install prerequisites
+      run: sudo apt update && sudo apt install -y libglib2.0-dev
+    - name: configure
+      run: env CLI_ONLY=1 ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster --version
+    - name: check executable
+      run: file dvdisaster && file dvdisaster | grep -q 'ELF 64'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
+  win64:
+    runs-on: windows-2016
+
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
+        update: false
+        install: git diffutils make pkg-config mingw-w64-x86_64-gtk2 mingw-w64-x86_64-glib2 mingw-w64-x86_64-gcc
+    - run: git config --global core.autocrlf input
+      shell: bash
+    - uses: actions/checkout@v2
+    - name: configure
+      run: ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster.exe --version
+    - name: check executable
+      run: file dvdisaster.exe && file dvdisaster.exe | grep -q 'x86-64, for MS Windows'
+    - name: regression tests
+      run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
+
+  win32:
+    runs-on: windows-2016
+
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW32
+        update: false
+        install: git diffutils make pkg-config mingw-w64-i686-gtk2 mingw-w64-i686-glib2 mingw-w64-i686-gcc
+    - run: git config --global core.autocrlf input
+      shell: bash
+    - uses: actions/checkout@v2
+    - name: configure
+      run: ./configure
+    - name: make
+      run: nproc && make -j$(nproc)
+    - name: check executability
+      run: ./dvdisaster.exe --version
+    - name: check executable
+      run: file dvdisaster.exe && file dvdisaster.exe | grep -q '386, for MS Windows'
     - name: regression tests
       run: mkdir /var/tmp/regtest && ./regtest/runtests.sh
